--- a/style.css
+++ b/style.css
@@ -528,6 +528,8 @@ nav ul li a {
         gap: 10px;
         height: 100%;
         margin-top: 10rem;
+        position: relative;
+        left: -30px;
     }
         #item-0 {
           grid-row-start: 1;
